--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 body {
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: #d53322;
+  
+}
+
+.fondo1{
+  background-color: #EF555C;
+  margin-top: 10px;
 }
 
 h1 {
@@ -20,6 +24,7 @@ p {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  color: yellow;
 }
 
 a {
@@ -31,34 +36,4 @@ a:hover {
   color: palevioletred;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: pink;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: yellow;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
